# vue.pinia-pug-sass-python.fastapi.sqlalchemy_orm.ariadne_gql

./: .gitignore  README.md  index.html  nodemon.json  package-lock.json  package.json  pyproject.toml  schema.gql  style.css  tsconfig.app.json  vite.config.ts
certs/: fullchain.pem  private_key.pem
server/: main.py
server/src/: controller.py  model.py  resolver.py  router.py  service.py
server/utils/: rel_path.py
shell/: clear.sh  install.sh
src/: main.ts
src/app/: entry-point.vue  routes.ts
src/backend/: __init__.py
src/backend/logic/: controller.py  model.py  resolver.py  router.py  service.py
src/backend/utils/: rel_path.py
src/components/: table-map.vue
src/frontend/: main.ts
src/frontend/pages/: post-page.vue  view-page.vue
src/frontend/utils/: apollo-client.ts
src/pages/: home-page.vue  post-page.vue  view-page.vue
src/stores/: data.ts  form.ts  inputs.ts  post.ts
src/utils/: apollo-client.ts
